--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
             </article>
         </section>
 
-        <p class="copyright">&copy; 2022 The Design Shop <i class="fas fa-circle"></i> The Design Blog</p>
+        <p class="copyright">&copy; 2022 The Design Shop &nbsp; &bull; &nbsp; The Design Blog</p>
 
     </footer>
 
